# boss

./: .gitignore  BOSS.cpp  BOSS.nsi  BOSS.sln  BOSS_version.rc  CMakeLists.txt  Makefile  Makefile.nix  Makefile.win  archive.py  menu  menu.sh
BOSS source code/: BOSS.cpp  BOSS.sln  Build Instructions.htm  Build Instructions.txt
BOSS source code/FO3/: BOSS-F.cpp  BOSS-FO3.vcxproj
BOSS source code/OB/: BOSS-Oblivion.vcxproj  BOSS.cpp  boss_svn.cpp
BOSS source code/Support/: Helpers.cpp  Helpers.h  ModFormat.cpp  ModFormat.h  Types.h  VersionRegex.cpp  VersionRegex.h
Docs/: BOSS API Readme.html  BOSS Masterlist Syntax.html  BOSS Readme.html  BOSS Userlist Syntax.html  BOSS Version History.html  doxyfile.conf
Docs/css/: readme.css  readme_aux.css
Docs/styles/: readme.css  readme_aux.css
Documentation/: BOSS_ReadMe.rtf
boss-common/: BOSS-Common.h
boss-common/Common/: Classes.h  Game.h
boss-common/Output/: Output.h
boss-common/Parsing/: Grammar.cpp
boss-common/Support/: ModFormat.cpp
boss-gui/: BOSS-GUI.vcxproj.filters
boss-gui/GUI/: ElementIDs.cpp  UserRuleEditor.cpp
branches/1.7.x-leandor-dev/boss-cli/: BOSS.sln
branches/leandor-refactoring/boss-cli/: Build Instructions.htm
code/: BOSS.sln
code/boss-api-tester/trunk/: BOSS API Tester.sln  BOSS API Tester.vcxproj  BOSS API Tester.vcxproj.filters  tester.cpp
code/boss-api/trunk/: BOSS-API.cpp  BOSS-API.h  BOSS-API.sln  BOSS-API.vcxproj  Build Instructions.html
code/boss-cli/trunk/: BOSS-CLI.cpp  BOSS-CLI.sln  BOSS-CLI.vcxproj  BOSS-CLI.vcxproj.filters  BOSS_version.rc  Build Instructions.html
code/boss-common/trunk/: BOSS-Common.h  BOSS-Common.sln  BOSS-Common.vcxproj  BOSS-Common.vcxproj.filters  BOSS.sln  Build Instructions.html  Makefile
code/boss-common/wrinklyninja-user-rules/: Build Instructions.htm
code/boss-gui/trunk/: BOSS GUI.sln  BOSS-GUI.sln  BOSS-GUI.vcxproj  BOSS-GUI.vcxproj.filters  Build Instructions.html  boss-gui.sln  boss-gui.vcxproj  boss-gui.vcxproj.filters  boss-gui_version.rc  grammars.h  gui.cpp  gui.h  helpers.cpp  helpers.h  parser.cpp  updater.cpp  updater.h
code/branches/libloadorder-integration/: Build Instructions.html
code/dirty-list-generator/trunk/: Build Instructions.html  DirtyListGenerator.sln
code/temp-hosted/: Build Instructions.html  Textfile-based LO Standard.html  libloadorder Readme.html  libloadorder.sln
code/temp-hosted/libbsa/: libbsa.h  libbsa.sln  libbsa.vcxproj  libbsa.vcxproj.filters
code/temp-hosted/libloadorder/: activeplugins.cpp  exception.cpp  exception.h  game.cpp  game.h  helpers.cpp  helpers.h  libespm-interface.cpp  libespm-interface.h  libloadorder.cpp  libloadorder.h  libloadorder.vcxproj  libloadorder.vcxproj.filters  loadorder.cpp  parsers.cpp  parsers.h  plugins.cpp  plugins.h
code/temp-hosted/libloadorder-tester/: libloadorder-tester.cpp  libloadorder-tester.vcxproj  libloadorder-tester.vcxproj.filters  tester-interface.cpp  tester-interface.h
code/trunk/: BOSS.sln  BOSS_version.rc  BUILD.md  Build Instructions.html  Makefile  README
code/trunk/boss-api/: BOSS-API.cpp  BOSS-API.h  BOSS-API.vcxproj  BOSS-API.vcxproj.filters
code/trunk/boss-api-tester/: BOSS API Tester.vcxproj  BOSS API Tester.vcxproj.filters  tester.cpp
code/trunk/boss-cli/: BOSS-CLI.cpp  BOSS-CLI.vcxproj  BOSS-CLI.vcxproj.filters
code/trunk/boss-common/: BOSS-Common.h  BOSS-Common.vcxproj  BOSS-Common.vcxproj.filters
code/trunk/boss-gui/: BOSS-GUI.vcxproj  BOSS-GUI.vcxproj.filters
data/: BOSS.ini
data/Docs/: BOSS Readme.html  BOSS Userlist Syntax.html  Licenses.txt
data/boss-common/: BOSS - Print Debug Info.bat  BOSS - Update Masterlist.bat  BOSS API ReadMe.html  BOSS API Readme.html  BOSS Icon.7z  BOSS Masterlist Syntax.html  BOSS ReadMe.html  BOSS Readme.html  BOSS User Rules ReadMe.html  BOSS Userlist Syntax.html  BOSS Version History.html  BOSS.ini
data/boss-common/resources/: script.js  (+2 more)
data/boss-oblivion/: BOSS - Custom Sorting Rules Readme.rtf  BOSS - Custom User Rules Readme.rtf  BOSS - Show Versions.bat  BOSS - Undo Last Run.bat  BOSS ReadMe.html  BOSS User Rules ReadMe.html  BOSS_ReadMe.rtf  masterlist-utf8-test.txt
dirty-list-generator/: DirtyListGenerator.vcxproj  Main.cpp
dirty_list_generator/: main.cpp
resources/: script.js  style.css
resources/l10n/: boss.pot
src/: BOSS-CLI.cpp  BOSS-CLI.vcxproj  BOSS-CLI.vcxproj.filters  BOSS-Common.h  BOSS-Common.vcxproj  BOSS-GUI.vcxproj  boss_cli.cpp  boss_cli.vcxproj  boss_common.h  boss_common.vcxproj  boss_common.vcxproj.filters  boss_gui.vcxproj  boss_gui.vcxproj.filters  config.h.in
src/Common/: Classes.cpp  Classes.h  DllDef.h  Error.cpp  Error.h  Game.cpp  Game.h  Globals.cpp  Globals.h  conditional_data.cpp  conditional_data.h
src/GUI/: ElementIDs.cpp  ElementIDs.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  UserRuleEditor.cpp  UserRuleEditor.h
src/Output/: Output.cpp  Output.h
src/Parsing/: Grammar.cpp  Grammar.h
src/Support/: Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  ModFormat.cpp  ModFormat.h  Platform.h  Types.h  VersionRegex.cpp  VersionRegex.h
src/Updating/: Updater.h
src/api/: boss.cpp  boss.h  tester.cpp
src/base/: fstream.h  regex.h
src/boss-api/: BOSS-API.cpp
src/boss-cli/: BOSS-CLI.vcxproj
src/boss-common/: BOSS-Common.vcxproj
src/boss-gui/: BOSS-GUI.vcxproj.filters
src/common/: classes.cpp  classes.h  conditional_data.cpp  conditional_data.h  dll_def.h  error.cpp  error.h  game.cpp  game.h  globals.cpp  globals.h  item_list.cpp  item_list.h  keywords.cpp  keywords.h  rule_line.cpp  rule_line.h  settings.cpp  settings.h
src/gui/: boss_icon.xpm  element_ids.cpp  element_ids.h  main_window.cpp  main_window.h  settings_window.cpp  settings_window.h  user_rule_editor.cpp  user_rule_editor.h
src/output/: boss_log.cpp  boss_log.h  output.cpp  output.h
src/parsing/: grammar.cpp  grammar.h
src/support/: helpers.cpp  helpers.h  logger.cpp  logger.h  mod_format.cpp  mod_format.h  platform.h  version_regex.cpp  version_regex.h
src/updating/: updater.cpp  updater.h
translations/: GenHumanTrans.bat
(+619 files in other folders)
